<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="carloscompany.recordnotas.Notas_Fragment"
    android:orientation="vertical">

    <TextView
        android:paddingTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edTxtTitleNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:gravity="center"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/edTxtDescrNota"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/descripcion"
        android:gravity="center"
        android:inputType="text"/>


</LinearLayout>
